--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -1,20 +1,111 @@
-@import "./sass";
-// 主题色
-$main-font-color: #333;
-$main-bg-color: #333;
-.view{
-  width:100%;
-  height:100%;
-  padding-bottom: 0.88rem;
-  overflow: hidden;
-  background: #fff;
-  // @include random;
-}
-.view-no{
-  @extend .view;
+* {
   padding: 0;
-  overflow-y: hidden;
+  margin: 0;
+  box-sizing: border-box;
 }
-.page-head{
-  height:0.88rem;
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none
+}
+
+blockquote, q {
+  quotes: none
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+body {
+
+  font-family: "PingFang SC", "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
+
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+  overflow: hidden;
+  //  position: relative;
+}
+html {
+  //  font-size: 10px;
+  //  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -webkit-touch-callout: none;
+  color: #333;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0
+}
+
+button,
+input,
+select,
+textarea {
+
+  outline: 0;
+  -webkit-box-sizing: border-box;
+  border: none;
+}
+
+input {
+  //  font-size: 14px;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: none
+}
+
+input[type="search"]::-webkit-search-cancel-button{
+  display: none;
+}
+input:disabled{
+  background: none;
 }
